name:          http-sink
version:       0.0.0
cabal-version: >= 1.8
build-type:    Simple

executable          http-sink
    hs-source-dirs: .
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    extensions:     OverloadedStrings
    build-depends:  base   >= 4      && < 5
                  , scotty
                  , docopt
                  , doctest
                  , wai
                  , wai-extra
                  , warp
                  , http-types
                  , data-default-class
                  , text
                  , attoparsec
                  , time
